<resources>
    <string name="app_name">Filters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon">Icon</string>
    <string name="title">Title</string>
    <string name="all">All</string>
    <string name="none">None</string>
    <string name="placeholder">placeholder</string>
    <string name="done">Done</string>
    <string name="filter">Filter</string>
</resources>
